--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ActivityMain"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +19,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WalletActivity"
+            android:name=".ActivityWallet"
             android:label="@string/title_activity_wallet"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ActivityWalletNew"></activity>
     </application>
 
 </manifest>
