--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,17 @@
             android:name=".ActivityWallet"
             android:label="@string/title_activity_wallet"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ActivityWalletNew"></activity>
+        <activity
+            android:name=".ActivityWalletNew"
+            android:label="@string/title_activity_wallet_new"
+            android:parentActivityName=".ActivityWallet"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ActivityTransactionNew"
+            android:label="@string/title_activity_transaction_new"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".ActivityWallet"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
