--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'joda-time:joda-time:2.9.9'
     testCompile 'junit:junit:4.12'
 }
